--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles.css">
+    <!-- Corregida la direccion del css -->
+    <link rel="stylesheet" href="/assets/css/styles.css">
     <title>APIs</title>
 </head>
 <body>
+  <!-- Agregado contenedores y encabezados para aprovechar algo del el css -->
+  <div class="containe wrapper">
+    <h1>Datos de la cuenta</h1>
     <p class="name"></p>
     <p class="blog"></p>
-
-  <script src="../assets/js/app.js"></script>
+    <!-- Agregado un p con la etiqueta location solicitado en js -->
+    <p class="location"></p>
+  </div>
+<!-- Corregida la direccion del js -->
+  <script src="/assets/js/app.js"></script>
 </body>
 </html>
